# playedtogether

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: api_client.rs  cli.rs  config.rs  main.rs  riot_id.rs  utils.rs
