[package]
name = "ptg"
version = "0.2.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.39", features = ["derive"] }
dirs = "6.0.0"
riven = "2.69.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = {version = "1.45.1", features = ["full"]}
