[package]
name = "ptg"
version = "0.2.4"
edition = "2024"
description = "A tool for fetching Riot APIs and determine if two League of Legends players have played together recently or not"
repository = "https://github.com/domahet/playedtogether/"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["lol", "leagueoflegends", "playedtogether"]


[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.39", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
riven = "2.69.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = {version = "1.45.1", features = ["full"]}
